Add student group management features to admin dashboard; implement routing, API integration, and UI components for creating, editing, viewing, and listing student groups, along with associated functionalities for group leaders and members.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -59,6 +59,7 @@
   "dataNotLoaded": "Data not loaded",
   "errorDelete": "Delete error ({{status}})",
   "menuProgramsAndCurricula": "Programs & Curricula",
+  "menuGroups": "Groups",
   "programManagement": "Programs and Curricula",
   "programSubtitle": "Manage educational programs. Curricula will be added here.",
   "programSearch": "Search programs...",
@@ -407,5 +408,52 @@
   "subjectUsagesSubtitle": "This subject is included in the following curricula:",
   "subjectNotInAnyCurriculum": "This subject is not used in any curriculum yet",
   "subjectNotInAnyCurriculumHint": "Add this subject to a curriculum to include it in an educational program.",
-  "subjectGoToPrograms": "Go to Programs & Curricula"
+  "subjectGoToPrograms": "Go to Programs & Curricula",
+  "groupManagement": "Group Management",
+  "groupSubtitle": "Student groups and curator assignment",
+  "groupSearchGroups": "Search groups...",
+  "groupCreateGroup": "Create Group",
+  "groupNoGroups": "No groups",
+  "groupProgram": "Program",
+  "groupCurriculum": "Study plan",
+  "groupCurator": "Curator",
+  "groupStartYear": "Start year",
+  "groupGraduationYear": "Graduation year",
+  "groupSuccessDeleted": "Group deleted",
+  "groupErrorLoadList": "Failed to load groups",
+  "groupErrorDelete": "Delete failed ({{status}})",
+  "groupDeleteConfirmTitle": "Delete group?",
+  "groupDeleteConfirmText": "This action cannot be undone.",
+  "groupCreatePageTitle": "Create group",
+  "groupCodeRequired": "Group code *",
+  "groupNamePlaceholder": "Group name",
+  "groupDescriptionPlaceholder": "Description",
+  "groupStartYearRequired": "Start year *",
+  "groupGraduationYearPlaceholder": "Graduation year (optional)",
+  "groupCuratorSelect": "Curator",
+  "groupCuratorNone": "No curator",
+  "groupErrorCodeRequired": "Code is required",
+  "groupErrorStartYearRange": "Start year must be 1900–2100",
+  "groupErrorCodeExists": "A group with this code already exists",
+  "groupErrorValidation": "Check the filled fields.",
+  "groupErrorProgramNotFound": "Program not found",
+  "groupErrorCurriculumNotFound": "Curriculum not found",
+  "groupEditPageTitle": "Edit group",
+  "groupViewPageTitle": "Group: {{name}}",
+  "groupBackToGroups": "Back to groups",
+  "groupNotFound": "Group not found",
+  "groupErrorLoad": "Failed to load group",
+  "groupInfoTitle": "Group information",
+  "groupStudyPlanLink": "Study plan",
+  "groupStudentsSection": "Group members",
+  "groupStudentsEmpty": "No students in this group yet",
+  "groupLeadersSection": "Group leaders",
+  "headman": "Headman",
+  "deputy": "Deputy",
+  "groupAddLeader": "Add leader",
+  "groupRemoveLeader": "Remove",
+  "groupLeaderRoleRequired": "Select role",
+  "groupLeaderStudentRequired": "Select a student from the group",
+  "groupLeadersEmpty": "No leaders assigned",
+  "groupErrorLeaderExists": "This student already has this role in the group"
 }
