--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -59,6 +59,7 @@
   "dataNotLoaded": "Данные не загружены",
   "errorDelete": "Ошибка удаления ({{status}})",
   "menuProgramsAndCurricula": "Программы и учебные планы",
+  "menuGroups": "Группы",
   "programManagement": "Программы и учебные планы",
   "programSubtitle": "Управление образовательными программами. Учебные планы будут добавлены сюда.",
   "programSearch": "Поиск программ...",
@@ -407,5 +408,52 @@
   "subjectUsagesSubtitle": "Этот предмет включён в следующие учебные планы:",
   "subjectNotInAnyCurriculum": "Этот предмет пока не используется ни в одном учебном плане",
   "subjectNotInAnyCurriculumHint": "Добавьте этот предмет в учебный план, чтобы включить его в образовательную программу.",
-  "subjectGoToPrograms": "Перейти к программам"
+  "subjectGoToPrograms": "Перейти к программам",
+  "groupManagement": "Управление группами",
+  "groupSubtitle": "Студенческие группы и назначение кураторов",
+  "groupSearchGroups": "Поиск групп...",
+  "groupCreateGroup": "Создать группу",
+  "groupNoGroups": "Нет групп",
+  "groupProgram": "Программа",
+  "groupCurriculum": "Учебный план",
+  "groupCurator": "Куратор",
+  "groupStartYear": "Год набора",
+  "groupGraduationYear": "Год выпуска",
+  "groupSuccessDeleted": "Группа удалена",
+  "groupErrorLoadList": "Не удалось загрузить список групп",
+  "groupErrorDelete": "Ошибка удаления ({{status}})",
+  "groupDeleteConfirmTitle": "Удалить группу?",
+  "groupDeleteConfirmText": "Это действие нельзя отменить.",
+  "groupCreatePageTitle": "Создать группу",
+  "groupCodeRequired": "Код группы *",
+  "groupNamePlaceholder": "Название группы",
+  "groupDescriptionPlaceholder": "Описание",
+  "groupStartYearRequired": "Год начала *",
+  "groupGraduationYearPlaceholder": "Год выпуска (необяз.)",
+  "groupCuratorSelect": "Куратор",
+  "groupCuratorNone": "Без куратора",
+  "groupErrorCodeRequired": "Код обязателен",
+  "groupErrorStartYearRange": "Год начала от 1900 до 2100",
+  "groupErrorCodeExists": "Группа с таким кодом уже существует",
+  "groupErrorValidation": "Проверьте заполненные поля.",
+  "groupErrorProgramNotFound": "Программа не найдена",
+  "groupErrorCurriculumNotFound": "Учебный план не найден",
+  "groupEditPageTitle": "Редактировать группу",
+  "groupViewPageTitle": "Группа: {{name}}",
+  "groupBackToGroups": "К списку групп",
+  "groupNotFound": "Группа не найдена",
+  "groupErrorLoad": "Не удалось загрузить группу",
+  "groupInfoTitle": "Информация о группе",
+  "groupStudyPlanLink": "Учебный план",
+  "groupStudentsSection": "Состав группы",
+  "groupStudentsEmpty": "В группе пока нет студентов",
+  "groupLeadersSection": "Старосты",
+  "headman": "Староста",
+  "deputy": "Заместитель",
+  "groupAddLeader": "Добавить старосту",
+  "groupRemoveLeader": "Снять",
+  "groupLeaderRoleRequired": "Выберите роль",
+  "groupLeaderStudentRequired": "Выберите студента из состава группы",
+  "groupLeadersEmpty": "Старосты не назначены",
+  "groupErrorLeaderExists": "У этого студента уже есть такая роль в группе"
 }
