--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -59,6 +59,7 @@
   "dataNotLoaded": "数据未加载",
   "errorDelete": "删除失败 ({{status}})",
   "menuProgramsAndCurricula": "项目与教学计划",
+  "menuGroups": "小组",
   "programManagement": "项目与教学计划",
   "programSubtitle": "管理教育项目。教学计划将在此添加。",
   "programSearch": "搜索项目...",
@@ -407,5 +408,52 @@
   "subjectUsagesSubtitle": "此课程已被以下培养方案引用：",
   "subjectNotInAnyCurriculum": "此课程尚未被任何培养方案引用",
   "subjectNotInAnyCurriculumHint": "将此课程添加到培养方案以纳入教学计划。",
-  "subjectGoToPrograms": "前往专业与培养方案"
+  "subjectGoToPrograms": "前往专业与培养方案",
+  "groupManagement": "小组管理",
+  "groupSubtitle": "学生小组与班主任指定",
+  "groupSearchGroups": "搜索小组...",
+  "groupCreateGroup": "创建小组",
+  "groupNoGroups": "暂无小组",
+  "groupProgram": "专业",
+  "groupCurriculum": "教学计划",
+  "groupCurator": "班主任",
+  "groupStartYear": "入学年份",
+  "groupGraduationYear": "毕业年份",
+  "groupSuccessDeleted": "小组已删除",
+  "groupErrorLoadList": "加载小组列表失败",
+  "groupErrorDelete": "删除失败 ({{status}})",
+  "groupDeleteConfirmTitle": "删除小组？",
+  "groupDeleteConfirmText": "此操作无法撤销。",
+  "groupCreatePageTitle": "创建小组",
+  "groupCodeRequired": "小组代码 *",
+  "groupNamePlaceholder": "小组名称",
+  "groupDescriptionPlaceholder": "描述",
+  "groupStartYearRequired": "入学年份 *",
+  "groupGraduationYearPlaceholder": "毕业年份（选填）",
+  "groupCuratorSelect": "班主任",
+  "groupCuratorNone": "无班主任",
+  "groupErrorCodeRequired": "请输入代码",
+  "groupErrorStartYearRange": "入学年份需在 1900–2100 之间",
+  "groupErrorCodeExists": "该代码的小组已存在",
+  "groupErrorValidation": "请检查所填字段。",
+  "groupErrorProgramNotFound": "未找到专业",
+  "groupErrorCurriculumNotFound": "未找到教学计划",
+  "groupEditPageTitle": "编辑小组",
+  "groupViewPageTitle": "小组：{{name}}",
+  "groupBackToGroups": "返回小组列表",
+  "groupNotFound": "未找到小组",
+  "groupErrorLoad": "加载小组失败",
+  "groupInfoTitle": "小组信息",
+  "groupStudyPlanLink": "教学计划",
+  "groupStudentsSection": "小组成员",
+  "groupStudentsEmpty": "该小组暂无学生",
+  "groupLeadersSection": "班干部",
+  "headman": "班长",
+  "deputy": "副班长",
+  "groupAddLeader": "添加班干部",
+  "groupRemoveLeader": "移除",
+  "groupLeaderRoleRequired": "请选择角色",
+  "groupLeaderStudentRequired": "请从小组中选择学生",
+  "groupLeadersEmpty": "未指定班干部",
+  "groupErrorLeaderExists": "该学生已在此小组中担任此角色"
 }
