Add student management features to group functionality; implement API methods for adding and removing students, enhance UI for student assignment, and integrate new modal component for better user experience in managing group members.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -446,6 +446,7 @@
   "groupInfoTitle": "Group information",
   "groupStudyPlanLink": "Study plan",
   "groupStudentsSection": "Group members",
+  "groupRoleInGroup": "Role in group",
   "groupStudentsEmpty": "No students in this group yet",
   "groupLeadersSection": "Group leaders",
   "headman": "Headman",
@@ -455,5 +456,20 @@
   "groupLeaderRoleRequired": "Select role",
   "groupLeaderStudentRequired": "Select a student from the group",
   "groupLeadersEmpty": "No leaders assigned",
-  "groupErrorLeaderExists": "This student already has this role in the group"
+  "groupErrorLeaderExists": "This student already has this role in the group",
+  "groupAssignAsLeader": "Assign as leader",
+  "groupAssignLeaderModalTitle": "Assign as headman or deputy",
+  "groupAddStudent": "Add student",
+  "groupAddStudentTitle": "Add student to group",
+  "groupSelectStudent": "Select student",
+  "groupStudentRequired": "Select at least one student",
+  "groupRemoveStudent": "Remove from group",
+  "groupRemoveStudentConfirm": "Are you sure you want to remove this student from the group?",
+  "groupErrorAddStudent": "Failed to add student",
+  "groupErrorRemoveStudent": "Failed to remove student",
+  "groupSuccessStudentAdded": "Student added to group",
+  "groupSuccessStudentRemoved": "Student removed from group",
+  "groupNoStudentsToAdd": "No students available to add",
+  "groupLoadingStudents": "Loading students...",
+  "groupLoadMoreStudents": "Load more"
 }
