--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -446,6 +446,7 @@
   "groupInfoTitle": "Информация о группе",
   "groupStudyPlanLink": "Учебный план",
   "groupStudentsSection": "Состав группы",
+  "groupRoleInGroup": "Роль в группе",
   "groupStudentsEmpty": "В группе пока нет студентов",
   "groupLeadersSection": "Старосты",
   "headman": "Староста",
@@ -455,5 +456,20 @@
   "groupLeaderRoleRequired": "Выберите роль",
   "groupLeaderStudentRequired": "Выберите студента из состава группы",
   "groupLeadersEmpty": "Старосты не назначены",
-  "groupErrorLeaderExists": "У этого студента уже есть такая роль в группе"
+  "groupErrorLeaderExists": "У этого студента уже есть такая роль в группе",
+  "groupAssignAsLeader": "Назначить старостой",
+  "groupAssignLeaderModalTitle": "Назначить старостой или заместителем",
+  "groupAddStudent": "Добавить студента",
+  "groupAddStudentTitle": "Добавление студента в группу",
+  "groupSelectStudent": "Выберите студента",
+  "groupStudentRequired": "Выберите хотя бы одного студента",
+  "groupRemoveStudent": "Удалить из группы",
+  "groupRemoveStudentConfirm": "Вы уверены, что хотите удалить студента из группы?",
+  "groupErrorAddStudent": "Ошибка при добавлении студента",
+  "groupErrorRemoveStudent": "Ошибка при удалении студента",
+  "groupSuccessStudentAdded": "Студент добавлен в группу",
+  "groupSuccessStudentRemoved": "Студент удалён из группы",
+  "groupNoStudentsToAdd": "Нет доступных студентов для добавления",
+  "groupLoadingStudents": "Загрузка списка студентов...",
+  "groupLoadMoreStudents": "Загрузить ещё"
 }
