--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -446,6 +446,7 @@
   "groupInfoTitle": "小组信息",
   "groupStudyPlanLink": "教学计划",
   "groupStudentsSection": "小组成员",
+  "groupRoleInGroup": "在组角色",
   "groupStudentsEmpty": "该小组暂无学生",
   "groupLeadersSection": "班干部",
   "headman": "班长",
@@ -455,5 +456,20 @@
   "groupLeaderRoleRequired": "请选择角色",
   "groupLeaderStudentRequired": "请从小组中选择学生",
   "groupLeadersEmpty": "未指定班干部",
-  "groupErrorLeaderExists": "该学生已在此小组中担任此角色"
+  "groupErrorLeaderExists": "该学生已在此小组中担任此角色",
+  "groupAssignAsLeader": "设为班干部",
+  "groupAssignLeaderModalTitle": "设为班长或副班长",
+  "groupAddStudent": "添加学生",
+  "groupAddStudentTitle": "添加学生到小组",
+  "groupSelectStudent": "选择学生",
+  "groupStudentRequired": "请至少选择一名学生",
+  "groupRemoveStudent": "从小组移除",
+  "groupRemoveStudentConfirm": "确定要将此学生从小组中移除吗？",
+  "groupErrorAddStudent": "添加学生失败",
+  "groupErrorRemoveStudent": "移除学生失败",
+  "groupSuccessStudentAdded": "学生已添加到小组",
+  "groupSuccessStudentRemoved": "学生已从小组移除",
+  "groupNoStudentsToAdd": "没有可添加的学生",
+  "groupLoadingStudents": "正在加载学生列表...",
+  "groupLoadMoreStudents": "加载更多"
 }
