--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -471,5 +471,9 @@
   "groupSuccessStudentRemoved": "Student removed from group",
   "groupNoStudentsToAdd": "No students available to add",
   "groupLoadingStudents": "Loading students...",
-  "groupLoadMoreStudents": "Load more"
+  "groupLoadMoreStudents": "Load more",
+  "groupEmailOrId": "Email / ID",
+  "groupLeaderFromDate": "From date",
+  "groupLeaderToDate": "To date",
+  "groupStudentsSelected": "{{count}} selected"
 }
