--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -471,5 +471,9 @@
   "groupSuccessStudentRemoved": "Студент удалён из группы",
   "groupNoStudentsToAdd": "Нет доступных студентов для добавления",
   "groupLoadingStudents": "Загрузка списка студентов...",
-  "groupLoadMoreStudents": "Загрузить ещё"
+  "groupLoadMoreStudents": "Загрузить ещё",
+  "groupEmailOrId": "Email / ID",
+  "groupLeaderFromDate": "Дата начала",
+  "groupLeaderToDate": "Дата окончания",
+  "groupStudentsSelected": "{{count}} выбрано"
 }
