Implement group leader role management in admin dashboard; add functionality to remove leader roles, update UI for role assignment, and enhance error handling for better user experience.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -447,6 +447,7 @@
   "groupStudyPlanLink": "Study plan",
   "groupStudentsSection": "Group members",
   "groupRoleInGroup": "Role in group",
+  "groupRoleNone": "No role",
   "groupStudentsEmpty": "No students in this group yet",
   "groupLeadersSection": "Group leaders",
   "headman": "Headman",
@@ -467,6 +468,7 @@
   "groupRemoveStudentConfirm": "Are you sure you want to remove this student from the group?",
   "groupErrorAddStudent": "Failed to add student",
   "groupErrorRemoveStudent": "Failed to remove student",
+  "groupErrorRemoveLeader": "Failed to remove leader role",
   "groupSuccessStudentAdded": "Student added to group",
   "groupSuccessStudentRemoved": "Student removed from group",
   "groupNoStudentsToAdd": "No students available to add",
