--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -447,6 +447,7 @@
   "groupStudyPlanLink": "Учебный план",
   "groupStudentsSection": "Состав группы",
   "groupRoleInGroup": "Роль в группе",
+  "groupRoleNone": "Без роли",
   "groupStudentsEmpty": "В группе пока нет студентов",
   "groupLeadersSection": "Старосты",
   "headman": "Староста",
@@ -467,6 +468,7 @@
   "groupRemoveStudentConfirm": "Вы уверены, что хотите удалить студента из группы?",
   "groupErrorAddStudent": "Ошибка при добавлении студента",
   "groupErrorRemoveStudent": "Ошибка при удалении студента",
+  "groupErrorRemoveLeader": "Ошибка при снятии роли старосты",
   "groupSuccessStudentAdded": "Студент добавлен в группу",
   "groupSuccessStudentRemoved": "Студент удалён из группы",
   "groupNoStudentsToAdd": "Нет доступных студентов для добавления",
