--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -447,6 +447,7 @@
   "groupStudyPlanLink": "教学计划",
   "groupStudentsSection": "小组成员",
   "groupRoleInGroup": "在组角色",
+  "groupRoleNone": "无角色",
   "groupStudentsEmpty": "该小组暂无学生",
   "groupLeadersSection": "班干部",
   "headman": "班长",
@@ -467,6 +468,7 @@
   "groupRemoveStudentConfirm": "确定要将此学生从小组中移除吗？",
   "groupErrorAddStudent": "添加学生失败",
   "groupErrorRemoveStudent": "移除学生失败",
+  "groupErrorRemoveLeader": "移除班干部角色失败",
   "groupSuccessStudentAdded": "学生已添加到小组",
   "groupSuccessStudentRemoved": "学生已从小组移除",
   "groupNoStudentsToAdd": "没有可添加的学生",
