Add system settings management features to admin dashboard; implement routing for academic years, enhance UI components for viewing and editing academic years, and update styles for improved user experience.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -477,5 +477,78 @@
   "groupEmailOrId": "Email / ID",
   "groupLeaderFromDate": "From date",
   "groupLeaderToDate": "To date",
-  "groupStudentsSelected": "{{count}} selected"
+  "groupStudentsSelected": "{{count}} selected",
+
+  "menuSystemSettings": "System settings",
+  "systemSettingsTitle": "System settings",
+  "systemSettingsSubtitle": "Academic calendar: years and semesters",
+  "academicSummaryTitle": "Current period",
+  "academicCurrentYear": "Current academic year",
+  "academicCurrentSemester": "Current semester",
+  "academicYearRange": "Year period",
+  "academicSemesterEnds": "Semester ends",
+  "academicNoCurrentYear": "No current academic year set",
+  "academicNoCurrentSemester": "No current semester set",
+  "academicYearsTitle": "Academic years",
+  "academicYearsSubtitle": "Click a year to view and edit its semesters",
+  "academicSearchYears": "Search by name...",
+  "academicCreateYear": "Create academic year",
+  "academicNoYears": "No academic years",
+  "academicAddYear": "+ Add academic year",
+  "academicStartDate": "Start date",
+  "academicEndDate": "End date",
+  "academicIsCurrent": "Current",
+  "academicYearViewTitle": "Academic year: {{name}}",
+  "academicBackToSettings": "Back to system settings",
+  "academicSemestersSection": "Semesters",
+  "academicSemestersSubtitle": "Semesters in this academic year",
+  "academicAddSemester": "Add semester",
+  "academicNoSemesters": "No semesters",
+  "academicSemesterNumber": "No.",
+  "academicSemesterName": "Name",
+  "academicWeekCount": "Weeks",
+  "academicExamPeriod": "Exams",
+  "academicCreateYearPageTitle": "Create academic year",
+  "academicEditYearPageTitle": "Edit academic year",
+  "academicNameRequired": "Name *",
+  "academicNamePlaceholder": "e.g. 2024/2025",
+  "academicStartDateRequired": "Start date *",
+  "academicEndDateRequired": "End date *",
+  "academicIsCurrentHint": "Only one year can be current",
+  "academicCreating": "Creating…",
+  "academicSaving": "Saving…",
+  "academicErrorNameRequired": "Name is required",
+  "academicErrorStartDateRequired": "Start date is required",
+  "academicErrorEndDateRequired": "End date is required",
+  "academicErrorEndBeforeStart": "End date must be on or after start date",
+  "academicErrorYearExists": "An academic year with this name already exists",
+  "academicErrorCreate": "Error creating academic year",
+  "academicErrorUpdate": "Error updating academic year",
+  "academicErrorLoadYears": "Could not load academic years",
+  "academicErrorLoadYear": "Could not load academic year",
+  "academicYearNotFound": "Academic year not found",
+  "academicSuccessYearDeleted": "Academic year deleted",
+  "academicDeleteYearConfirmTitle": "Delete academic year?",
+  "academicDeleteYearConfirmText": "All semesters in this year will also be removed. This cannot be undone.",
+  "academicErrorDeleteYear": "Delete error ({{status}})",
+  "academicCreateSemesterTitle": "Add semester",
+  "academicEditSemesterTitle": "Edit semester",
+  "academicSemesterNumberRequired": "Semester number *",
+  "academicSemesterNumberReadOnly": "Read-only",
+  "academicSemesterNumberPlaceholder": "1, 2, …",
+  "academicSemesterNamePlaceholder": "e.g. Fall semester",
+  "academicWeekCountPlaceholder": "16",
+  "academicWeekCountHint": "1–52",
+  "academicErrorNumberRequired": "Semester number is required",
+  "academicErrorNumberMin": "Number must be at least 1",
+  "academicErrorWeekCountRange": "Week count must be between 1 and 52",
+  "academicErrorSemesterExists": "A semester with this number already exists for this year",
+  "academicErrorCreateSemester": "Error creating semester",
+  "academicErrorUpdateSemester": "Error updating semester",
+  "academicSuccessSemesterDeleted": "Semester deleted",
+  "academicDeleteSemesterConfirmTitle": "Delete semester?",
+  "academicDeleteSemesterConfirmText": "This cannot be undone.",
+  "academicErrorDeleteSemester": "Delete error ({{status}})",
+  "academicErrorLoadSemesters": "Could not load semesters",
+  "academicErrorValidation": "Please check the fields and fix errors."
 }
