--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -477,5 +477,78 @@
   "groupEmailOrId": "Email / ID",
   "groupLeaderFromDate": "Дата начала",
   "groupLeaderToDate": "Дата окончания",
-  "groupStudentsSelected": "{{count}} выбрано"
+  "groupStudentsSelected": "{{count}} выбрано",
+
+  "menuSystemSettings": "Настройки системы",
+  "systemSettingsTitle": "Настройки системы",
+  "systemSettingsSubtitle": "Учебный календарь: академические годы и семестры",
+  "academicSummaryTitle": "Текущий период",
+  "academicCurrentYear": "Текущий учебный год",
+  "academicCurrentSemester": "Текущий семестр",
+  "academicYearRange": "Период года",
+  "academicSemesterEnds": "Семестр заканчивается",
+  "academicNoCurrentYear": "Текущий учебный год не задан",
+  "academicNoCurrentSemester": "Текущий семестр не задан",
+  "academicYearsTitle": "Академические годы",
+  "academicYearsSubtitle": "Нажмите на год, чтобы просмотреть и редактировать семестры",
+  "academicSearchYears": "Поиск по названию...",
+  "academicCreateYear": "Создать учебный год",
+  "academicNoYears": "Нет академических годов",
+  "academicAddYear": "+ Добавить учебный год",
+  "academicStartDate": "Дата начала",
+  "academicEndDate": "Дата окончания",
+  "academicIsCurrent": "Текущий",
+  "academicYearViewTitle": "Учебный год: {{name}}",
+  "academicBackToSettings": "К настройкам системы",
+  "academicSemestersSection": "Семестры",
+  "academicSemestersSubtitle": "Семестры этого учебного года",
+  "academicAddSemester": "Добавить семестр",
+  "academicNoSemesters": "Нет семестров",
+  "academicSemesterNumber": "№",
+  "academicSemesterName": "Название",
+  "academicWeekCount": "Недель",
+  "academicExamPeriod": "Экзамены",
+  "academicCreateYearPageTitle": "Создать учебный год",
+  "academicEditYearPageTitle": "Редактировать учебный год",
+  "academicNameRequired": "Название *",
+  "academicNamePlaceholder": "напр. 2024/2025",
+  "academicStartDateRequired": "Дата начала *",
+  "academicEndDateRequired": "Дата окончания *",
+  "academicIsCurrentHint": "Только один год может быть текущим",
+  "academicCreating": "Создание…",
+  "academicSaving": "Сохранение…",
+  "academicErrorNameRequired": "Название обязательно",
+  "academicErrorStartDateRequired": "Укажите дату начала",
+  "academicErrorEndDateRequired": "Укажите дату окончания",
+  "academicErrorEndBeforeStart": "Дата окончания должна быть не раньше даты начала",
+  "academicErrorYearExists": "Учебный год с таким названием уже существует",
+  "academicErrorCreate": "Ошибка создания учебного года",
+  "academicErrorUpdate": "Ошибка обновления учебного года",
+  "academicErrorLoadYears": "Не удалось загрузить список годов",
+  "academicErrorLoadYear": "Не удалось загрузить учебный год",
+  "academicYearNotFound": "Учебный год не найден",
+  "academicSuccessYearDeleted": "Учебный год удалён",
+  "academicDeleteYearConfirmTitle": "Удалить учебный год?",
+  "academicDeleteYearConfirmText": "Все семестры этого года также будут удалены. Это действие нельзя отменить.",
+  "academicErrorDeleteYear": "Ошибка удаления ({{status}})",
+  "academicCreateSemesterTitle": "Добавить семестр",
+  "academicEditSemesterTitle": "Редактировать семестр",
+  "academicSemesterNumberRequired": "Номер семестра *",
+  "academicSemesterNumberReadOnly": "Только для чтения",
+  "academicSemesterNumberPlaceholder": "1, 2, …",
+  "academicSemesterNamePlaceholder": "напр. Осенний семестр",
+  "academicWeekCountPlaceholder": "16",
+  "academicWeekCountHint": "1–52",
+  "academicErrorNumberRequired": "Номер семестра обязателен",
+  "academicErrorNumberMin": "Номер должен быть не менее 1",
+  "academicErrorWeekCountRange": "Количество недель от 1 до 52",
+  "academicErrorSemesterExists": "Семестр с таким номером уже есть в этом году",
+  "academicErrorCreateSemester": "Ошибка создания семестра",
+  "academicErrorUpdateSemester": "Ошибка обновления семестра",
+  "academicSuccessSemesterDeleted": "Семестр удалён",
+  "academicDeleteSemesterConfirmTitle": "Удалить семестр?",
+  "academicDeleteSemesterConfirmText": "Это действие нельзя отменить.",
+  "academicErrorDeleteSemester": "Ошибка удаления ({{status}})",
+  "academicErrorLoadSemesters": "Не удалось загрузить семестры",
+  "academicErrorValidation": "Проверьте заполненные поля."
 }
