--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -477,5 +477,78 @@
   "groupEmailOrId": "邮箱 / 学号",
   "groupLeaderFromDate": "开始日期",
   "groupLeaderToDate": "结束日期",
-  "groupStudentsSelected": "已选 {{count}} 项"
+  "groupStudentsSelected": "已选 {{count}} 项",
+
+  "menuSystemSettings": "系统设置",
+  "systemSettingsTitle": "系统设置",
+  "systemSettingsSubtitle": "校历：学年与学期",
+  "academicSummaryTitle": "当前周期",
+  "academicCurrentYear": "当前学年",
+  "academicCurrentSemester": "当前学期",
+  "academicYearRange": "学年区间",
+  "academicSemesterEnds": "学期结束",
+  "academicNoCurrentYear": "未设置当前学年",
+  "academicNoCurrentSemester": "未设置当前学期",
+  "academicYearsTitle": "学年",
+  "academicYearsSubtitle": "点击学年可查看和编辑其学期",
+  "academicSearchYears": "按名称搜索...",
+  "academicCreateYear": "创建学年",
+  "academicNoYears": "暂无学年",
+  "academicAddYear": "+ 添加学年",
+  "academicStartDate": "开始日期",
+  "academicEndDate": "结束日期",
+  "academicIsCurrent": "当前",
+  "academicYearViewTitle": "学年：{{name}}",
+  "academicBackToSettings": "返回系统设置",
+  "academicSemestersSection": "学期",
+  "academicSemestersSubtitle": "本学年的学期",
+  "academicAddSemester": "添加学期",
+  "academicNoSemesters": "暂无学期",
+  "academicSemesterNumber": "序号",
+  "academicSemesterName": "名称",
+  "academicWeekCount": "周数",
+  "academicExamPeriod": "考试",
+  "academicCreateYearPageTitle": "创建学年",
+  "academicEditYearPageTitle": "编辑学年",
+  "academicNameRequired": "名称 *",
+  "academicNamePlaceholder": "如 2024/2025",
+  "academicStartDateRequired": "开始日期 *",
+  "academicEndDateRequired": "结束日期 *",
+  "academicIsCurrentHint": "只能有一个当前学年",
+  "academicCreating": "创建中…",
+  "academicSaving": "保存中…",
+  "academicErrorNameRequired": "名称为必填",
+  "academicErrorStartDateRequired": "请选择开始日期",
+  "academicErrorEndDateRequired": "请选择结束日期",
+  "academicErrorEndBeforeStart": "结束日期不得早于开始日期",
+  "academicErrorYearExists": "该名称的学年已存在",
+  "academicErrorCreate": "创建学年失败",
+  "academicErrorUpdate": "更新学年失败",
+  "academicErrorLoadYears": "无法加载学年列表",
+  "academicErrorLoadYear": "无法加载学年",
+  "academicYearNotFound": "学年未找到",
+  "academicSuccessYearDeleted": "学年已删除",
+  "academicDeleteYearConfirmTitle": "删除学年？",
+  "academicDeleteYearConfirmText": "该学年下的所有学期也将被删除。此操作不可撤销。",
+  "academicErrorDeleteYear": "删除失败 ({{status}})",
+  "academicCreateSemesterTitle": "添加学期",
+  "academicEditSemesterTitle": "编辑学期",
+  "academicSemesterNumberRequired": "学期序号 *",
+  "academicSemesterNumberReadOnly": "只读",
+  "academicSemesterNumberPlaceholder": "1, 2, …",
+  "academicSemesterNamePlaceholder": "如 秋季学期",
+  "academicWeekCountPlaceholder": "16",
+  "academicWeekCountHint": "1–52",
+  "academicErrorNumberRequired": "学期序号必填",
+  "academicErrorNumberMin": "序号至少为 1",
+  "academicErrorWeekCountRange": "周数须在 1–52 之间",
+  "academicErrorSemesterExists": "该学年下已存在此序号的学期",
+  "academicErrorCreateSemester": "创建学期失败",
+  "academicErrorUpdateSemester": "更新学期失败",
+  "academicSuccessSemesterDeleted": "学期已删除",
+  "academicDeleteSemesterConfirmTitle": "删除学期？",
+  "academicDeleteSemesterConfirmText": "此操作不可撤销。",
+  "academicErrorDeleteSemester": "删除失败 ({{status}})",
+  "academicErrorLoadSemesters": "无法加载学期",
+  "academicErrorValidation": "请检查并修正填写内容。"
 }
